// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses summary with multiple expenses and total 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $54,616.54
  </h1>
</div>
`;

exports[`Should render expenses summary with one expense and total 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.50
  </h1>
</div>
`;
